reboot02-resume-viewer-api/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resumeviewer-app
  labels:
    app: resumeviewer-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resumeviewer-app
  template:
    metadata:
      labels:
        app: resumeviewer-app
    spec:
      serviceAccountName: gke-bucket-authenticate
      containers:
        - name: producer
          image: us-central1-docker.pkg.dev/ltc-reboot25-team-39/application-repo/resumeviewerapp:latest
          ports:
            - containerPort: 8085
          resources:
            requests:
              cpu: "50m"
              memory: "320Mi"
            limits:
              cpu: "200m"
              memory: "640Mi"
