reboot02-resume-viewer-api/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: resumeviewer-app
spec:
  selector:
    app: resumeviewer-app
  ports:
    - name: http
      port: 80
      targetPort: 8085
  type: ClusterIP
